# engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  all.gyp  c_flag_overrides.cmake  common.gypi  obsidian.sublime-project
app/: CMakeLists.txt  app-shader.h  app.gyp  main-msvc.cc  main-posix.cc  memory-msvc.cc  memory-posix.cc  simple-shader.cc  simple-shader.h  test-gl-sprite-shader.cc  test-gl-sprite-shader.h  test-shader.cc  test-shader.h
app/lib/glad/: cmake_install.cmake
app/mesh-convert/: plane.h  sphere.cc  sphere.h
app/mesh-convert/linux/: main.cc
app/test/: app.gyp  gui.cc  gui.h  simple-shape.cc  simple-shape.h
app/test/linux/: main-linux.cc
app/test/win32/: main-msvc.cc
resources/: main.html  simple-fragment.vs  simple-vertex.vs
shader/: cef-ui-frag.glsl  cef-ui-vert.glsl  simple.frag  simple.vert  sprite.frag  sprite.frag.120  sprite.vert  sprite.vert.120
tools/: build-ninja.bat  enviroment.bat  generate-app.bat  generate-app.py  vsbuild.bat  vsbuild.py  vsclean.bat
tools/gyp/.svn/: all-wcprops  entries
tools/gyp/buildbot/.svn/: entries
tools/gyp/data/win/.svn/: entries
tools/gyp/pylib/gyp/.svn/: all-wcprops  entries
tools/gyp/pylib/gyp/generator/.svn/: all-wcprops  entries
tools/gyp/samples/.svn/: entries
tools/gyp/tools/.svn/: all-wcprops  entries
tools/gyp/tools/Xcode/.svn/: entries
tools/gyp/tools/Xcode/Specifications/.svn/: all-wcprops  entries
tools/gyp/tools/emacs/.svn/: all-wcprops  entries
tools/gyp/tools/emacs/testdata/.svn/: entries
